moved Country names to be in front of gridlines

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
 
   <h3> Graph 1: Visualizing the percent of population vaccinated for countries of varying GDPs</h3>
-  <p> In this graph,  </p>
+  <p> This graph explores how the GDP of a country impacts its vaccincation progress as a percent of total population. Several countires are highlighted with their flag to show a variation among countires with high and low GDPs. We want to see if high-GDP countries have a greater percentage of their populaiton vaccinated and if lower-GDP countires have a smaller percentage of their population vaccinated.  </p>
 
-  <svg id="per100" height=600 width=800></svg>
+  <svg id="per100" height=600 width=800 style="border:2px solid black; margin:20px;"></svg>
 
   <script>
 
@@ -206,7 +206,7 @@
 
   <div>
 
-  <h3> Graph 2: Visualizing the vaccination progress of counties from December 2020 to March 2021</h3>
+  <h3> Graph 2: Visualizing the vaccination progress of selected counties from December 2020 to March 2021</h3>
   <p> As visualized in the scatterplot above, the United States, United Kindgdom, and Italy all have high GDPs, Hungary and Israel have relatively lower GDPs, and Seychelles has a significantly lower GDP. This linegraph expands on their vaccination progress from December 13th, 2020 to March 7th, 2020 to show surprising trends in vaccination progress over the last four months among counties with high and low GDPs. </p>
 
   <svg id="lineplot" width="800" height="500" style="border:2px solid black; margin:20px;"></svg>
@@ -247,18 +247,6 @@
       svg.append("text").text('Percentage of Population Vaccinated').attr('x', - chartHeight/2 - 35).attr('y', 20).attr('transform', 'rotate(-90)').attr('class', 'titles').attr('text-anchor', 'middle');
 
       svg.append("text").text('Percentage of Population Vaccinated From December 2020 to March 2021').attr('x', chartWidth/2 + 50).attr('y', 15).attr('class', 'titles').attr('text-anchor', 'middle');
-
-      svg.append("text").text('Seychelles').attr('x', 760).attr('y', 80).attr('text-anchor', 'middle').attr('fill','goldenrod');
-
-      svg.append("text").text('Israel').attr('x', 780).attr('y', 130).attr('text-anchor', 'middle').attr('fill','purple');
-
-      svg.append("text").text('United Kingdom').attr('x', 740).attr('y', 230).attr('text-anchor', 'middle').attr('fill','orange');
-
-      svg.append("text").text('United States').attr('x', 750).attr('y', 310).attr('text-anchor', 'middle').attr('fill','blue');
-
-      svg.append("text").text('Hungary').attr('x', 770).attr('y', 347).attr('text-anchor', 'middle').attr('fill','red');
-
-      svg.append("text").text('Italy').attr('x', 780).attr('y', 410).attr('text-anchor', 'middle').attr('fill','green');
 
       let ticks = svg.append("g").attr("id","ticks");
 
@@ -306,6 +294,18 @@
       makeLine(data, pathGenerator, "Seychelles", colors[10], "goldenrod", dateScale, vaxScale);
 
       chartArea.raise();
+
+      svg.append("text").text('Seychelles').attr('x', 760).attr('y', 80).attr('text-anchor', 'middle').attr('fill','goldenrod');
+
+      svg.append("text").text('Israel').attr('x', 780).attr('y', 130).attr('text-anchor', 'middle').attr('fill','purple');
+
+      svg.append("text").text('United Kingdom').attr('x', 740).attr('y', 230).attr('text-anchor', 'middle').attr('fill','orange');
+
+      svg.append("text").text('United States').attr('x', 750).attr('y', 310).attr('text-anchor', 'middle').attr('fill','blue');
+
+      svg.append("text").text('Hungary').attr('x', 770).attr('y', 347).attr('text-anchor', 'middle').attr('fill','red');
+
+      svg.append("text").text('Italy').attr('x', 780).attr('y', 410).attr('text-anchor', 'middle').attr('fill','green');
 
     });
 
