--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
       const commaFormatter = d3.format(",");
       const moneyFormat = function (d) {
-        if (d > Math.pow(10, 12)) {
+        if (d >= Math.pow(10, 12)) {
           return `$${d / Math.pow(10, 12)} T`;
         } else {
           return `$${d / Math.pow(10, 9)} B`;
