fixed some null data points

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <style>
     html {
-      margin-left: 5em;
-      margin-right: 5em;
+      margin-left: 4em;
+      margin-right: 4em;
       margin-top: 1em;
     }
 
@@ -47,7 +47,7 @@
 
 <body>
 
-  <h3> Graph 1: Visualizing the percent of population vaccinated for countries of varying GDPs</h3>
+  <h3>Visualizing the percent of population vaccinated for countries of varying GDPs</h3>
   <p> This graph explores the correlation between a country's GDP and its vaccination progress.
     Several countries are highlighted with their flag to show a variation among
     countries with high and low GDPs. We wanted to see if high-GDP countries have a greater percentage
@@ -264,7 +264,7 @@
 
   <div>
 
-    <h3> Graph 2: Visualizing the vaccination progress of selected countries from December 2020 to March 2021</h3>
+    <h3>Visualizing the vaccination progress of selected countries from December 2020 to March 2021</h3>
     <p> As visualized in the scatterplot above, the United States, United Kindgdom, and Italy all have high GDPs, and
       Hungary and Israel have relatively lower GDPs, while Seychelles has the lowest GDP of the group. This linegraph
       expands on their vaccination progress from December 13th, 2020 to March 7th, 2021 to show surprising trends in
