--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
       display: flex;
       margin-top: 3px;
     }
+
+    h3 {
+      background: lightblue;
+      padding: 20px;
+    }
   </style>
 </head>
 
@@ -267,7 +272,7 @@
     <h3>Visualizing the vaccination progress of selected countries from December 2020 to March 2021</h3>
     <p> As visualized in the scatterplot above, the United States, United Kindgdom, and Italy all have high GDPs,
       Hungary and Israel have relatively lower GDPs, and Seychelles has the lowest GDP of the group. This line graph
-      expands on their vaccination progress to show surprising trends in vaccination progress over the last four months. 
+      expands on their vaccination progress to show surprising trends in vaccination progress over the last four months.
       As seen in the scatterplot, a high GDP does not necessarily correlate with high vaccination progress.</p>
 
     <svg id="lineplot" width="810" height="500"></svg>
