--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     }
 
     .legend-row {
-      display: flex;
       margin-top: 3px;
     }
 
@@ -191,7 +190,7 @@
       // can't use d3.extent for GDP data since it's now stored in a dict/object
       const minGDP = Math.min(...Object.values(validCountryToGDP));
       const maxGDP = Math.max(...Object.values(validCountryToGDP));
-      const gdpExtent = [minGDP, maxGDP];
+      const gdpExtent = [minGDP, maxGDP + Math.pow(10, 13)];
       const gdpScale = d3.scaleLog().domain(gdpExtent).range([0, chartWidth2]);
       console.log(gdpExtent)
 
